landing/style.css
@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@500;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;300;400;500;600;700;800;900&display=swap');

/*  font-family: 'Prompt', sans-serif;
    font-family: "Mitr", sans-serif;
    font-family: 'Heebo', sans-serif;
    font-family: 'Monoton', cursive;
*/

body {
  margin: 0;
  font-family: "Mitr", sans-serif;
  scroll-behavior: smooth;
}

.fullpage {
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.intro {
  background: linear-gradient(150deg, #080808 10%, #1f1257, #1e2364);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.navbar {
  width: 100%;
  height: 10%;
  position: absolute;
  top: 0;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding-left: 1%;
  color: #fff;
}

.icon {
  font-weight: 900;
  font-size: 24px;
  letter-spacing: 10px;
  margin-top: 20px;
}

.logo {
  font-size: 26px;
  letter-spacing: 12px;
  float: left;
  margin-left: 50px;
  margin-top: 30px; 
  text-decoration: none;
}

.menu ul {
  float: right;
  display: flex;
  justify-content: center;
  align-items: center;
}

.menu ul li {
  list-style: none;
  margin-right: 50px;
  margin-top: 10px;
  font-size: 18px;
  letter-spacing: 3px;
}

.menu ul li a {
  text-decoration: none;
  color: #fff;
  font-weight: 600;
  transition: 0.4s ease-in-out;
  border-radius: 20px;
  padding: 6px 15px;
}

.menu ul li a:hover {
  color: #fff;
  background-color: #c211a1;
}

.background {
  position: relative;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: none;
  overflow: hidden;
}

.background::before {
  content: '';
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 140px;
  background: linear-gradient(to top, #1f1257, transparent);
  z-index: 1;
}

.background img {
  position: absolute;
  top: 0;
  left: 0;
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.background img#sun, img#stars {
  mix-blend-mode: screen;
}

.background p {
  color: #fff;
  font-family: 'Heebo', sans-serif; 
}

#subtext {
  font-family: "Mitr", sans-serif;
  position: absolute;
  top: 12%;
  font-size: 100px;
  font-weight: 900;
  letter-spacing: 30px;
  margin-left: 26px;
}

#text {
  position: absolute;
  top: 26%;
  font-size: 300px;
  font-weight: 900;
  /* color: #c211a1; */
}

.rocket {
  position: fixed;
  top: 10%;
  left: 50%;
  transition: all 0.5s;
}

.rocket[data-status="intro"] {
  top: 0%;
  opacity: 0;
}

.rocket[data-status="inspecRocket"] {
  opacity: 1;
  top: 10%;
  transition: all 0.5s;
}

.t_r,
.c_r {
  transform-origin: top right;
}

.t_l,
.c_l {
  transform-origin: top left;
}

.rocket[data-status="step1"] .t_r,
.rocket[data-status="step2"] .t_r,
.rocket[data-status="step3"] .t_r,
.rocket[data-status="step4"] .t_r,
.rocket[data-status="step5"] .t_r,
.rocket[data-status="inspecRover"] .t_r,
.rocket[data-status="step6"] .t_r,
.rocket[data-status="step7"] .t_r,
.rocket[data-status="step8"] .t_r,
.rocket[data-status="step9"] .t_r,
.rocket[data-status="endcredit"] .t_r {
  transform: translate(30%, -50%) rotate(-45deg);
  opacity: 0;
}

.rocket[data-status="step1"] .t_l,
.rocket[data-status="step2"] .t_l,
.rocket[data-status="step3"] .t_l,
.rocket[data-status="step4"] .t_l,
.rocket[data-status="step5"] .t_l,
.rocket[data-status="inspecRover"] .t_l,
.rocket[data-status="step6"] .t_l,
.rocket[data-status="step7"] .t_l,
.rocket[data-status="step8"] .t_l,
.rocket[data-status="step9"] .t_l,
.rocket[data-status="endcredit"] .t_l {
  transform: translate(-30%, -50%) rotate(45deg);
  opacity: 0;
}

.rocket[data-status="step2"] .c_r,
.rocket[data-status="step3"] .c_r,
.rocket[data-status="step4"] .c_r,
.rocket[data-status="step5"] .c_r,
.rocket[data-status="inspecRover"] .c_r,
.rocket[data-status="step6"] .c_r,
.rocket[data-status="step7"] .c_r,
.rocket[data-status="step8"] .c_r,
.rocket[data-status="step9"] .c_r,
.rocket[data-status="endcredit"] .c_r {
  transform: translate(-30%, -50%) rotate(45deg);
  opacity: 0;
}

.rocket[data-status="step2"] .c_l,
.rocket[data-status="step3"] .c_l,
.rocket[data-status="step4"] .c_l,
.rocket[data-status="step5"] .c_l,
.rocket[data-status="inspecRover"] .c_l,
.rocket[data-status="step6"] .c_l,
.rocket[data-status="step7"] .c_l,
.rocket[data-status="step8"] .c_l,
.rocket[data-status="step9"] .c_l,
.rocket[data-status="endcredit"] .c_l {
  transform: translate(30%, -50%) rotate(-45deg);
  opacity: 0;
}

.rocket[data-status="step3"] .body,
.rocket[data-status="step4"] .body,
.rocket[data-status="step5"] .body,
.rocket[data-status="inspecRover"] .body,
.rocket[data-status="step6"] .body,
.rocket[data-status="step7"] .body,
.rocket[data-status="step8"] .body,
.rocket[data-status="step9"] .body,
.rocket[data-status="endcredit"] .body {
  transform: translate(0, -20%);
  /* opacity: 0; */
}

.rocket[data-status="step4"] .body,
.rocket[data-status="step5"] .body,
.rocket[data-status="inspecRover"] .body,
.rocket[data-status="step6"] .body,
.rocket[data-status="step7"] .body,
.rocket[data-status="step8"] .body,
.rocket[data-status="step9"] .body,
.rocket[data-status="endcredit"] .body {
  transform: translate(0, -50%);
  opacity: 0;
}

.rocket[data-status="step4"] .head,
.rocket[data-status="step5"] .head,
.rocket[data-status="inspecRover"] .head,
.rocket[data-status="step6"] .head,
.rocket[data-status="step7"] .head,
.rocket[data-status="step8"] .head,
.rocket[data-status="step9"] .head,
.rocket[data-status="endcredit"] .head {
  transform: translate(0, -25%);
  /* opacity: 0; */
}

.rocketPart {
  position: absolute;
  top: 0;
  transition: all 0.5s;
}

.t_r,
.t_l,
.c_r {
  z-index: 4;
}

.c_l {
  z-index: 3;
}

.body {
  z-index: 2;
}

.head {
  z-index: 1;
}

.rocketPage {
  background: linear-gradient(180deg, #1f1257, #191044, #0b071d);
  /* background: rgb(255, 253, 244); */
  /* background: linear-gradient(180deg, #1f1257, #130d30, #080514); */
}

/* .rocketPage .step6 img#mars {
  width: 100%;
  height: 100%;
  object-fit: cover;
} */

